fixes iOS stretch and tag- & subline

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -106,7 +106,7 @@ body {
     width:466px;
     height:466px;
     margin:85px auto;
-    overflow: hidden;
+    // overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
